--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://blistighast.github.io/BrianGuterl/",
   "name": "personal-site",
   "version": "0.1.0",
   "private": true,
