removed / from homepage in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://blistighast.github.io/",
+  "homepage": "https://blistighast.github.io",
   "name": "personal-site",
   "version": "0.1.0",
   "private": true,
