--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "normalize": "^0.3.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.2"
   },
   "scripts": {
